@@ -1,5 +1,10 @@
 		   CHANGES IN formatR VERSION 0.2-2
 
+NEW FEATURES
+
+    o long roxygen comments will not be wrapped (i.e. comments begin
+  with #' or ##')
+
 MINOR CHANGES
 
     o fixed a minor problem in the function usage() (out --> output)
